opam-version: "1.2"
maintainer: "Alessandro Strada <alessandro.strada@gmail.com>"
authors: [ "Alessandro Strada" ]
license: "MIT"
homepage: "https://github.com/astrada/gapi-ocaml"
dev-repo: "https://github.com/astrada/gapi-ocaml.git"
bug-reports: "https://github.com/astrada/gapi-ocaml/issues"
build: [
  ["dune" "build" "-p" name "-j" jobs "--profile release"]
]
build-test: [
  ["dune" "runtest" "-p" name "-j" jobs "--profile release"]
]
depends: [
  "cryptokit"
  ("extlib" | "extlib-compat")
  "dune" {build}
  "ocamlnet" {>= "4.1.4"}
  "ocurl"
  "xmlm"
  "ounit" {test}
  "yojson"
]
depopts: [
  "ppx_monadic"
]
available: [ ocaml-version >= "4.02.3" ]
