(executable
 (name testSuite)
 (flags (:standard -w -3-6-23-27-32-33-50))
 (libraries threads ounit2 gapi-ocaml))

(alias
 (name runtest)
 (deps
   testSuite.exe
   (glob_files test_data/*))
 (action (run ./testSuite.exe)))

(alias
 (name runtest-all)
 (deps
   testSuite.exe
   (glob_files test_data/*)
   (glob_files ../../config/*))
 (action (run ./testSuite.exe -all)))

(alias
 (name runtest-urlshortener)
 (deps
   testSuite.exe
   (glob_files ../../config/*))
 (action (run ./testSuite.exe -service urlshortener)))

(alias
 (name runtest-oa2serv)
 (deps
   testSuite.exe
   (glob_files ../../config/*))
 (action (run ./testSuite.exe -service oa2serv)))

(alias
 (name runtest-oa2devices)
 (deps
   testSuite.exe
   (glob_files ../../config/*))
 (action (run ./testSuite.exe -service oa2devices)))

; TODO: add stanzas to test each service

