(executable
 (name testSuite)
 (flags (:standard -w -3-6-23-27-32-33-50))
 (libraries threads ounit2 gapi-ocaml))

(rule
 (alias runtest)
 (deps
   testSuite.exe
   (glob_files test_data/*))
 (action (run ./testSuite.exe)))

(rule
 (alias runtest-all)
 (deps
   testSuite.exe
   (glob_files test_data/*)
   (glob_files ../../config/*))
 (action (run ./testSuite.exe -all)))

(rule
 (alias runtest-urlshortener)
 (deps
   testSuite.exe
   (glob_files ../../config/*))
 (action (run ./testSuite.exe -service urlshortener)))

(rule
 (alias runtest-oa2serv)
 (deps
   testSuite.exe
   (glob_files ../../config/*))
 (action (run ./testSuite.exe -service oa2serv)))

(rule
 (alias runtest-oa2devices)
 (deps
   testSuite.exe
   (glob_files ../../config/*))
 (action (run ./testSuite.exe -service oa2devices)))

; TODO: add stanzas to test each service

